Increase component style budget limit

--- a/src/app/pages/consultation/consultation.html
+++ b/src/app/pages/consultation/consultation.html
@@ -71,8 +71,10 @@
             [class.active]="isFeatureActive(feature)"
           >
             <mat-icon matListIcon>{{ feature.icon }}</mat-icon>
-            <div matLine>{{ feature.title }}</div>
-            <p matLine class="description">{{ feature.description }}</p>
+            <div class="text-group">
+              <div matLine class="title">{{ feature.title }}</div>
+              <p matLine class="description">{{ feature.description }}</p>
+            </div>
             <mat-icon class="chevron">chevron_right</mat-icon>
           </a>
         </mat-nav-list>
